Fixed Spark issues